--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
 # site settings
-title: Forty
-subtitle: by HTML5 UP
-email: youremailaddress@gmail.com
-description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
-baseurl: "/forty-jekyll-theme" # the subpath of your site, e.g. /blog
-url: # the base hostname & protocol for your site
-author:
-street_address: 1234 Somewhere Road
-city: Nashville
-state: TN
-zip_code: 55555
+title: Sahil
+subtitle: Saboo
+email: sahilsaboo98@gmail.com
+description: A passionate product manager, oxford comma enthusiast, and lifelong learner. </br> This is my personal space where I share my thoughts, musings, book reviews, and more.
+baseurl: # the subpath of your site, e.g. /blog
+url: "https://sahilsaboo.github.io/" # the base hostname & protocol for your site
+author: Sahil Saboo
+street_address: 
+city: 
+state: 
+zip_code: 
 country: United States of America
-phone: (716) 555-5555
+phone:
 
 # homepage tiles
 tiles-source: pages # accepts "posts" or "pages"
@@ -22,12 +22,11 @@ tiles-count: 6
 # Icons are not shown if value is empty
 # You need to restart jekyll for changes to have an effect
 socials:
-  GitHub: https://github.com/andrewbanchich
+  GitHub: https://github.com/sahilsaboo
   GitLab:
-  Google-Plus: https://plus.google.com/u/0/+AndrewBanchich
-  Instagram:
-  LinkedIn: https://www.linkedin.com/in/andrew-banchich-a4ba1195
-  Twitter: https://twitter.com/andrewbanchich
+  Instagram: https://www.instagram.com/sahilsaboo/
+  LinkedIn: https://www.linkedin.com/in/sahil-saboo/
+  Twitter: https://twitter.com/sahilsaboo
   Facebook:
   Slack:
 
