update base url to custom domain

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ subtitle: Saboo
 email: sahilsaboo98@gmail.com
 description: A passionate product manager, lifelong learner, and oxford comma enthusiast. </br> This is my personal space where I share my thoughts, musings, book reviews, and more.
 baseurl: # the subpath of your site, e.g. /blog
-url: "https://sahilsaboo.github.io/" # the base hostname & protocol for your site
+url: "https://sahilsaboo.com/" # the base hostname & protocol for your site
 author: Sahil Saboo
 street_address: 
 city: 
